--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   freezed: 2.5.2
   freezed_annotation: ^2.4.1
+  go_router: ^14.2.0
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   path: ^1.9.0
