--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   freezed: 2.5.2
   freezed_annotation: ^2.4.1
   go_router: ^14.2.0
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   path: ^1.9.0
@@ -34,3 +36,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets: 
+    - assets/
